objects/CartItem.object
<CustomObject>
    <fields>
        <fullName>PMC_DH_AccountPartnerRelationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>PMC_SS_AccountPartnerRelationships__c</referenceTo>
        <relationshipLabel>Cart Items (Ship To)</relationshipLabel>
        <relationshipName>Cart_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_BasePONumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Base PO Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_CustomerName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PMC DH Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_DeliveryInstructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Instructions</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_DH_DeliveryMode__c</fullName>
        <label>Delivery Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barge</fullName>
                </value>
                <value>
                    <fullName>Truck</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Vessel</fullName>
                </value>
                <value>
                    <fullName>Inventory Transfer</fullName>
                </value>
                <value>
                    <fullName>Container</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_DeliveryPONumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery PO Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_EMPTYCONST1__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>EMPTYCONST1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_EMPTYCONST__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>EMPTYCONST</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_GroupReferenceNumber__c</fullName>
        <description>This is the group reference number for request id that needs to be send to sap</description>
        <label>Group Reference Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_HarvestPeriod__c</fullName>
        <defaultValue>&quot;Present&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>HarvestPeriod</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Incoterms2__c</fullName>
        <defaultValue>&apos;SAP/Supply chain&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Incoterms2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Incoterms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Incoterms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_IsReorder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This value will be true if cart item is created for reorder</description>
        <label>Is Reorder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_DH_ItemNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PMC DH Item Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_NotaFiscalDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PMC DH Nota Fiscal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_DH_NotaFiscalNumber__c</fullName>
        <label>PMC DH Nota Fiscal Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Number__c</fullName>
        <label>Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_POIncrementBy__c</fullName>
        <label>PO Increment By</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_PackType__c</fullName>
        <description>This field captures the Pack type of the product associated.</description>
        <label>Pack Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Packed</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_PackageType__c</fullName>
        <description>This field captures the package type for the product associated.</description>
        <label>Packaging Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Big Bag 1500 Kg</fullName>
                </value>
                <value>
                    <fullName>Big Bag 1350 Kg</fullName>
                </value>
                <value>
                    <fullName>Big Bag 1000 Kg</fullName>
                </value>
                <value>
                    <fullName>Saco 50 Kg</fullName>
                </value>
                <value>
                    <fullName>Saco 30 Kg</fullName>
                </value>
                <value>
                    <fullName>Saco 25 Kg</fullName>
                </value>
                <value>
                    <fullName>Saco 50 Kg - Paletizado</fullName>
                </value>
                <value>
                    <fullName>Saco 25 Kg - Paletizado</fullName>
                </value>
                <value>
                    <fullName>25KG Bags</fullName>
                </value>
                <value>
                    <fullName>50KG Bags</fullName>
                </value>
                <value>
                    <fullName>Transp. Valved NPK</fullName>
                </value>
                <value>
                    <fullName>Transp. Valved Urea</fullName>
                </value>
                <value>
                    <fullName>Braided   Valved</fullName>
                </value>
                <value>
                    <fullName>BagOneWay 90x90x1,30</fullName>
                </value>
                <value>
                    <fullName>BagOneWay 500Kg</fullName>
                </value>
                <value>
                    <fullName>BagOneWay Liner 1,40</fullName>
                </value>
                <value>
                    <fullName>Bag ONE-Way-Liner Urea 99x99x1,40</fullName>
                </value>
                <value>
                    <fullName>Bag One Way Liner 500kg Liner 90X</fullName>
                </value>
                <value>
                    <fullName>Tranç. Nitrog. Laminated</fullName>
                </value>
                <value>
                    <fullName>Tranç. Urea Laminated</fullName>
                </value>
                <value>
                    <fullName>Trançada com Liner</fullName>
                </value>
                <value>
                    <fullName>BagOneWayLiner 750kg</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
                <value>
                    <fullName>Sifted Bulk</fullName>
                </value>
                <value>
                    <fullName>Bulk - Mosaic Production</fullName>
                </value>
                <value>
                    <fullName>Big BagOneWay Liner</fullName>
                </value>
                <value>
                    <fullName>Saco 30 Kg - Paletizado</fullName>
                </value>
                <value>
                    <fullName>1000 KG Bags</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_PaymentTerms__c</fullName>
        <formula>IF(AND(!ISNULL(TEXT(( Cart.PMC_DH_PaymentTerms__c ))),! ISBLANK(TEXT(  Cart.PMC_DH_PaymentTerms__c))),TEXT( Cart.PMC_DH_PaymentTerms__c),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_PlantShipFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship From</label>
        <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
        <relationshipLabel>Cart Items (Ship From)</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Prepay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_DH_ProtocolNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Protocol Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_RequestedShipmentDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PMC DH Requested Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SAPRequestReferenceNumber__c</fullName>
        <formula>&quot;MD-&quot;+Cart.PMC_DH_CartReferenceNumber__c +&quot;-&quot;+ TEXT(PMC_DH_GroupReferenceNumber__c) +&quot;-&quot;+ TEXT(PMC_DH_ShipmentReferenceNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Request Reference Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SAP_CT_CONSTANT_NUMBER__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>SAP CONSTANT NUMBER</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SAP_CT_CONSTANT_VALUE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAP CONSTANT VALUE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SAP_CT_CONSTANT__c</fullName>
        <defaultValue>&quot;Frieght&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP CONSTANT</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SellOutPrice__c</fullName>
        <label>PMC DH Sell Out Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_ShipmentReferenceNumber__c</fullName>
        <description>This is a reference number for the cart items shipment</description>
        <label>ShipmentReferenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RFQ</fullName>
                    <default>true</default>
                    <label>RFQ</label>
                </value>
                <value>
                    <fullName>RTD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_UnitofMeasure__c</fullName>
        <description>This field is created to check unit measurement value.</description>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MTN</fullName>
                </value>
                <value>
                    <fullName>STN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingType__c</fullName>
        <defaultValue>&quot;Hopper Truck&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>ShippingType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>